--- a/partner_revision/views/revision_field_rule_views.xml
+++ b/partner_revision/views/revision_field_rule_views.xml
@@ -55,6 +55,7 @@
 
     <menuitem id="menu_revision_field_rule"
       parent="menu_revision"
+      groups="group_revision_manager"
       sequence="20"
       action="action_revision_field_rule_view"/>
   </data>
