--- a/partner_revision/views/menu.xml
+++ b/partner_revision/views/menu.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <openerp>
     <data noupdate="0">
-      <menuitem id="menu_revision"
-        name="Partner Revisions"
-        groups="group_revision_user"
+      <menuitem id="menu_changeset"
+        name="Partner Changesets"
+        groups="group_changeset_user"
         parent="base.menu_base_config"
         sequence="20"/>
     </data>
