--- a/partner_revision/views/res_partner_views.xml
+++ b/partner_revision/views/res_partner_views.xml
@@ -7,17 +7,17 @@
       <field name="model">res.partner</field>
       <field name="inherit_id" ref="base.view_partner_form" />
       <field name="priority" eval="18"/>
-      <field name="groups_id" eval="[(4, ref('partner_revision.group_revision_user'))]"/>
+      <field name="groups_id" eval="[(4, ref('partner_revision.group_changeset_user'))]"/>
       <field name="arch" type="xml">
         <xpath expr="//div[@name='buttons']" position="inside">
           <button class="oe_inline oe_stat_button"
             type="action"
-            name="%(partner_revision.action_res_partner_revision_view)d"
-            attrs="{'invisible': [('count_pending_revisions', '=', 0)]}"
+            name="%(partner_revision.action_res_partner_changeset_view)d"
+            attrs="{'invisible': [('count_pending_changesets', '=', 0)]}"
             context="{'search_default_draft': 1, 'search_default_partner_id': active_id}"
             icon="fa-code-fork">
-            <field string="Pending Revisions"
-              name="count_pending_revisions"
+            <field string="Pending Changesets"
+              name="count_pending_changesets"
               widget="statinfo"/>
           </button>
         </xpath>
@@ -31,9 +31,9 @@
       <field name="arch" type="xml">
         <filter name="customer" position="after">
           <separator/>
-          <filter string="Pending Revisions"
-            name="pending_revisions"
-            domain="[('count_pending_revisions', '>', 0)]"/>
+          <filter string="Pending Changesets"
+            name="pending_changesets"
+            domain="[('count_pending_changesets', '>', 0)]"/>
         </filter>
       </field>
     </record>
