--- a/partner_revision/views/revision_field_rule_views.xml
+++ b/partner_revision/views/revision_field_rule_views.xml
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <openerp>
   <data noupdate="0">
-    <record id="view_revision_field_rule_tree" model="ir.ui.view">
-      <field name="name">revision.field.rule.tree</field>
-      <field name="model">revision.field.rule</field>
+    <record id="view_changeset_field_rule_tree" model="ir.ui.view">
+      <field name="name">changeset.field.rule.tree</field>
+      <field name="model">changeset.field.rule</field>
       <field name="arch" type="xml">
-        <tree string="Revision Fields Rules">
+        <tree string="Changeset Fields Rules">
           <field name="model_id"/>
           <field name="field_id"/>
           <field name="action"/>
@@ -13,12 +13,12 @@
       </field>
     </record>
 
-    <record id="view_revision_field_rule_form" model="ir.ui.view">
-      <field name="name">revision.field.rule.form</field>
-      <field name="model">revision.field.rule</field>
+    <record id="view_changeset_field_rule_form" model="ir.ui.view">
+      <field name="name">changeset.field.rule.form</field>
+      <field name="model">changeset.field.rule</field>
       <field name="arch" type="xml">
-        <form string="Revision Fields Rules">
-          <sheet string="Revision Fields Rules">
+        <form string="Changeset Fields Rules">
+          <sheet string="Changeset Fields Rules">
             <group>
               <field name="model_id" invisible="1"/>
               <field name="field_id"
@@ -32,11 +32,11 @@
       </field>
     </record>
 
-    <record id="view_revision_field_rule_search" model="ir.ui.view">
-      <field name="name">revision.field.rule.search</field>
-      <field name="model">revision.field.rule</field>
+    <record id="view_changeset_field_rule_search" model="ir.ui.view">
+      <field name="name">changeset.field.rule.search</field>
+      <field name="model">changeset.field.rule</field>
       <field name="arch" type="xml">
-        <search string="Revision Fields Rules">
+        <search string="Changeset Fields Rules">
           <field name="model_id"/>
           <field name="field_id"/>
           <field name="action"/>
@@ -44,19 +44,20 @@
       </field>
     </record>
 
-    <record model="ir.actions.act_window" id="action_revision_field_rule_view">
-      <field name="name">Revision Fields Rules</field>
+    <record model="ir.actions.act_window" id="action_changeset_field_rule_view">
+      <field name="name">Changeset Fields Rules</field>
       <field name="type">ir.actions.act_window</field>
-      <field name="res_model">revision.field.rule</field>
+      <field name="res_model">changeset.field.rule</field>
       <field name="view_type">form</field>
       <field name="view_mode">tree,form</field>
-      <field name="search_view_id" ref="view_revision_field_rule_search"/>
+      <field name="search_view_id" ref="view_changeset_field_rule_search"/>
     </record>
 
-    <menuitem id="menu_revision_field_rule"
-      parent="menu_revision"
-      groups="group_revision_manager"
+    <menuitem id="menu_changeset_field_rule"
+      parent="menu_changeset"
+      name="Field Rules"
+      groups="group_changeset_manager"
       sequence="20"
-      action="action_revision_field_rule_view"/>
+      action="action_changeset_field_rule_view"/>
   </data>
 </openerp>
