Store the source of a changeset

--- a/partner_changeset/views/res_partner_changeset_views.xml
+++ b/partner_changeset/views/res_partner_changeset_views.xml
@@ -33,6 +33,7 @@
           <sheet string="Partner Changeset">
             <group>
               <field name="partner_id"/>
+              <field name="source"/>
               <field name="date"/>
             </group>
             <group string="Changes">
