--- a/partner_changeset/views/changeset_field_rule_views.xml
+++ b/partner_changeset/views/changeset_field_rule_views.xml
@@ -6,8 +6,8 @@
       <field name="model">changeset.field.rule</field>
       <field name="arch" type="xml">
         <tree string="Changeset Fields Rules">
-          <field name="model_id"/>
           <field name="field_id"/>
+          <field name="source_model_id"/>
           <field name="action"/>
         </tree>
       </field>
@@ -22,9 +22,12 @@
             <group>
               <field name="model_id" invisible="1"/>
               <field name="field_id"
+                options="{'no_create_edit': True, 'no_open': True}"
                 domain="[('model_id', '=', model_id),
                 ('ttype', 'in', ('char', 'selection', 'date', 'datetime', 'float', 'integer', 'text', 'boolean', 'many2one')),
                 ('readonly', '=', False)]"/>
+              <field name="source_model_id"
+                options="{'no_create_edit': True, 'no_open': True}"/>
               <field name="action"/>
             </group>
           </sheet>
@@ -37,8 +40,8 @@
       <field name="model">changeset.field.rule</field>
       <field name="arch" type="xml">
         <search string="Changeset Fields Rules">
-          <field name="model_id"/>
           <field name="field_id"/>
+          <field name="source_model_id"/>
           <field name="action"/>
         </search>
       </field>
