--- a/partner_contact_in_several_companies/views/res_partner.xml
+++ b/partner_contact_in_several_companies/views/res_partner.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<openerp>
+<odoo>
 <data>
 
     <record id="view_res_partner_filter_contact" model="ir.ui.view">
@@ -10,10 +10,10 @@
             <filter name="type_company" position="after">
                 <separator/>
                 <filter string="All positions" name="type_otherpositions"
-                        context="{'search_show_all_positions': True}"
+                        context="{'search_show_all_positions': {'is_set': True, 'set_value': True}}"
                         help="All partner positions"/>
             </filter>
-            <xpath expr="/search/group/filter[@string='Company']" position="before">
+            <xpath expr="/search/group[@name='group_by']" position="inside">
                 <filter string="Person" name="group_person" context="{'group_by': 'contact_id'}"/>
             </xpath>
         </field>
@@ -39,7 +39,7 @@
             <field name="is_company" position="after">
                 <field name="contact_type" invisible="1"/>
             </field>
-            <page string="Contacts" position="after">
+            <page name='internal_notes' position="before">
                 <page string="Other Positions" attrs="{'invisible': ['|',('is_company','=',True),('contact_id','!=',False)]}">
                     <field name="other_contact_ids" context="{'default_contact_id': active_id, 'default_name': name, 'default_street': street, 'default_street2': street2, 'default_city': city, 'default_state_id': state_id, 'default_zip': zip, 'default_country_id': country_id, 'default_supplier': supplier}}" mode="kanban">
                         <kanban>
@@ -59,103 +59,74 @@
                             <field name="mobile"/>
                             <field name="fax"/>
                             <field name="state_id"/>
-                            <field name="has_image"/>
+                            <field name="image"/>
+                            <field name="lang"/>
                             <templates>
                                 <t t-name="kanban-box">
                                     <t t-set="color" t-value="kanban_color(record.color.raw_value)"/>
-                                    <div t-att-class="color + (record.title.raw_value == 1 ? ' oe_kanban_color_alert' : '')" style="position: relative">
-                                        <a t-if="! read_only_mode" type="delete" style="position: absolute; right: 0; padding: 4px; diplay: inline-block">X</a>
-                                        <div class="oe_module_vignette">
-                                        <a type="open">
-                                            <t t-if="record.has_image.raw_value === true">
-                                                <img t-att-src="kanban_image('res.partner', 'image', record.id.value, {'preview_image': 'image_small'})" class="oe_avatar oe_kanban_avatar_smallbox"/>
+                                    <div t-att-class="color + (record.title.raw_value == 1 ? ' oe_kanban_color_alert' : '') + ' oe_kanban_global_click'">
+                                        <a t-if="!read_only_mode" type="delete" class="fa fa-times pull-right"/>
+                                        <div class="o_kanban_image">
+                                            <img t-if="record.image.raw_value" t-att-src="'data:image/png;base64,'+record.image.raw_value"/>
+                                            <t t-if="!record.image.raw_value">
+                                                <img t-if="record.is_company.raw_value === true" t-att-src='_s + "/base/static/src/img/company_image.png"'/>
+                                                <img t-if="record.is_company.raw_value === false" t-att-src='_s + "/base/static/src/img/avatar.png"'/>
                                             </t>
-                                            <t t-if="record.image and record.image.raw_value !== false">
-                                                <img t-att-src="'data:image/png;base64,'+record.image.raw_value" class="oe_avatar oe_kanban_avatar_smallbox"/>
-                                            </t>
-                                            <t t-if="record.has_image.raw_value === false and (!record.image or record.image.raw_value === false)">
-                                                <t t-if="record.is_company.raw_value === true">
-                                                    <img t-att-src='_s + "/base/static/src/img/company_image.png"' class="oe_kanban_image oe_kanban_avatar_smallbox"/>
-                                                </t>
-                                                <t t-if="record.is_company.raw_value === false">
-                                                    <img t-att-src='_s + "/base/static/src/img/avatar.png"' class="oe_kanban_image oe_kanban_avatar_smallbox"/>
-                                                </t>
-                                            </t>
-                                        </a>
-                                            <div class="oe_module_desc">
-                                                <div class="oe_kanban_box_content oe_kanban_color_bglight oe_kanban_color_border">
-                                                    <table class="oe_kanban_table">
-                                                        <tr>
-                                                            <td class="oe_kanban_title1" align="left" valign="middle">
-                                                                <h4><a type="open"><field name="name"/></a></h4>
-                                                                <i>
-                                                                    <t t-if="record.parent_id.raw_value and !record.function.raw_value"><field name="parent_id"/></t>
-                                                                    <t t-if="!record.parent_id.raw_value and record.function.raw_value"><field name="function"/></t>
-                                                                    <t t-if="record.parent_id.raw_value and record.function.raw_value"><field name="function"/> at <field name="parent_id"/></t>
-                                                                </i>
-                                                                <div><a t-if="record.email.raw_value" title="Mail" t-att-href="'mailto:'+record.email.value">
-                                                                    <field name="email"/>
-                                                                </a></div>
-                                                                <div t-if="record.phone.raw_value">Phone: <field name="phone"/></div>
-                                                                <div t-if="record.mobile.raw_value">Mobile: <field name="mobile"/></div>
-                                                                <div t-if="record.fax.raw_value">Fax: <field name="fax"/></div>
-                                                            </td>
-                                                        </tr>
-                                                    </table>
-                                                </div>
-                                            </div>
+                                        </div>
+                                        <div class="oe_kanban_details">
+                                            <field name="name"/>
+                                            <div t-if="record.function.raw_value"><field name="function"/></div>
+                                            <div t-if="record.email.raw_value"><field name="email"/></div>
+                                            <div t-if="record.phone.raw_value">Phone: <field name="phone"/></div>
+                                            <div t-if="record.mobile.raw_value">Mobile: <field name="mobile"/></div>
+                                            <div t-if="record.fax.raw_value">Fax: <field name="fax"/></div>
                                         </div>
                                     </div>
                                 </t>
                             </templates>
                         </kanban>
-                        <form string="Contact" version="7.0">
+                        <form string="Contact">
                             <sheet>
-                                <field name="image" widget='image' class="oe_avatar oe_left" options='{"preview_image": "image_medium"}'/>
-                                <div class="oe_title">
-                                    <label for="name" class="oe_edit_only"/>
-                                    <h1><field name="name" style="width: 70%%"/></h1>
-                                </div>
+                                <field name="type" required="1" widget="radio" options="{'horizontal': true}"/>
+                                <hr/>
                                 <group>
-                                    <!-- inherited part -->
-                                    <field name="category_id" widget="many2many_tags" placeholder="Tags..." style="width: 70%%"/>
-                                    <field name="parent_id" placeholder="Company" domain="[('is_company','=',True)]"/>
-                                    <!-- inherited part end -->
-                                    <field name="function" placeholder="e.g. Sales Director"/>
-                                    <field name="email"/>
-                                    <field name="phone"/>
-                                    <field name="mobile"/>
-                                </group>
-                                <div>
-                                    <field name="use_parent_address"/><label for="use_parent_address"/>
-                                </div>
-                                <group>
-                                    <label for="type"/>
-                                    <div name="div_type">
-                                        <field class="oe_inline" name="type"/>
-                                    </div>
-                                    <label for="street" string="Address" attrs="{'invisible': [('use_parent_address','=', True)]}"/>
-                                    <div attrs="{'invisible': [('use_parent_address','=', True)]}" name="div_address">
-                                        <field name="street" placeholder="Street..."/>
-                                        <field name="street2"/>
-                                        <div class="address_format">
-                                            <field name="city" placeholder="City" style="width: 40%%"/>
-                                            <field name="state_id" class="oe_no_button" placeholder="State" style="width: 37%%" options='{"no_open": True}' on_change="onchange_state(state_id)"/>
-                                            <field name="zip" placeholder="ZIP" style="width: 20%%"/>
+                                    <group attrs="{'invisible': [('type','=', 'contact')]}">
+                                        <label for="street" string="Address"/>
+                                        <div>
+                                            <div class="o_address_format" name="div_address">
+                                                <field name="street" placeholder="Street..." class="o_address_street"/>
+                                                <field name="street2" placeholder="Street 2..." class="o_address_street"/>
+                                                <field name="city" placeholder="City" class="o_address_city"/>
+                                                <field name="state_id" class="o_address_state" placeholder="State" options='{"no_open": True}' on_change="onchange_state(state_id)" context="{'country_id': country_id, 'zip': zip}"/>
+                                                <field name="zip" placeholder="ZIP" class="o_address_zip"/>
+                                                <field name="country_id" placeholder="Country" class="o_address_country" options='{"no_open": True, "no_create": True}'/>
+                                            </div>
                                         </div>
-                                        <field name="country_id" placeholder="Country" class="oe_no_button" options='{"no_open": True}'/>
-                                    </div>
+                                    </group>
+                                    <group>
+                                        <field name="name" string="Contact Name" attrs="{'required' : [('type', '=', 'contact')]}"/>
+                                        <field name="title" placeholder="e.g. Mr."
+                                            attrs="{'invisible': [('type','&lt;&gt;', 'contact')]}"/>
+                                        <field name="function" placeholder="e.g. Sales Director"
+                                            attrs="{'invisible': [('type','&lt;&gt;', 'contact')]}"/>
+                                        <field name="email"/>
+                                        <field name="phone" widget="phone"/>
+                                        <field name="mobile" widget="phone"/>
+                                        <field name="comment" placeholder="internal note..."/>
+                                    </group>
                                 </group>
                                 <field name="supplier" invisible="True"/>
+                                <field name="customer" invisible="True"/>
+                                <field name="lang" invisible="True"/>
                             </sheet>
                         </form>
                     </field>
                 </page>
             </page>
-            <xpath expr="//form[@string='Contact']/sheet//field[@name='category_id']" position="before">
+            <xpath expr="//field[@name='category_id']" position="before">
                 <group>
                     <label for="contact_type" class="oe_edit_only"/>
-                    <field name="contact_type" readonly="0" on_change="onchange_contact_type(contact_type)" nolabel="1"/>
+                    <field name="contact_type" readonly="0" nolabel="1"/>
                 </group>
             </xpath>
             <xpath expr="//field[@name='child_ids']/form//field[@name='name']" position="after">
@@ -177,11 +148,10 @@
                 <xpath expr="//page[@name='personal_information_page']">
                     <p attrs="{'invisible': [('contact_id','=',False)]}">
                         To see personal information about this contact, please
-                        go to to the his person form:
+                        go to to the this person form:
                         <field name="contact_id" class="oe_inline"
                                domain="[('contact_type','!=','attached')]"
                                context="{'show_address': 1}"
-                               on_change="onchange_contact_id(contact_id)"
                                options="{'always_reload': True}"/>
                     </p>
                 </xpath>
@@ -213,4 +183,4 @@
     </record>
 
 </data>
-</openerp>
+</odoo>
