--- a/partner_contact_personal_information_page/views/res_partner.xml
+++ b/partner_contact_personal_information_page/views/res_partner.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<openerp>
+<odoo>
 <data>
 
 <record id="personal_information" model="ir.ui.view">
@@ -17,8 +17,8 @@
                 </page>
             </xpath>
         </data>
-  </field>
+    </field>
 </record>
 
 </data>
-</openerp>
+</odoo>
