--- a/partner_firstname/views/res_partner.xml
+++ b/partner_firstname/views/res_partner.xml
@@ -15,7 +15,7 @@
                 }</attribute>
             </xpath>
 
-            <xpath expr="//field[@name='category_id']" position="before">
+            <xpath expr="//field[@name='company_type']" position="after">
                 <group attrs="{'invisible': [('is_company', '=', True)]}">
                     <field name="lastname" attrs=
                         "{'required': [('firstname', '=', False),
@@ -42,7 +42,7 @@
                 }</attribute>
             </xpath>
 
-            <xpath expr="//field[@name='category_id']" position="before">
+            <xpath expr="//field[@name='company_type']" position="after">
                 <group attrs="{'invisible': [('is_company', '=', True)]}">
                     <field name="lastname" attrs=
                         "{'required': [('firstname', '=', False),
@@ -55,8 +55,8 @@
 
             <!-- Modify inner contact form of child_ids -->
             <xpath expr="//field[@name='child_ids']/form
-                         //field[@name='category_id']"
-                   position="before">
+                         //field[@name='name']"
+                   position="after">
                 <group attrs="{'invisible': [('is_company', '=', True)]}">
                     <field name="lastname" attrs=
                         "{'required': [('firstname', '=', False),
@@ -67,13 +67,7 @@
                 </group>
             </xpath>
 
-            <xpath expr="//field[@name='child_ids']/form
-                         //field[@name='category_id']"
-                   position="attributes">
-                <attribute name="style"/>
-            </xpath>
-
-            <xpath expr="//field[@name='child_ids']/form//label[@for='name']"
+            <xpath expr="//field[@name='child_ids']/form//field[@name='name']"
                    position="before">
                 <div class="oe_edit_only">
                     <field name="is_company"
