--- a/partner_firstname/views/res_user.xml
+++ b/partner_firstname/views/res_user.xml
@@ -2,10 +2,6 @@
 <openerp>
 <data>
 
-<!-- Required before modifying `base.vew_users_form`.
-     https://github.com/odoo/odoo/issues/6324#issuecomment-93534579 -->
-<function model="res.groups" name="update_user_groups_view" />
-
 <record id="view_users_form" model="ir.ui.view">
     <field name="name">Add firstname and surnames</field>
     <field name="model">res.users</field>
@@ -17,12 +13,14 @@
             </xpath>
 
             <xpath expr="//field[@name='email']" position="after">
-                <group>
-                    <field name="lastname"
-                           attrs="{'required': [('firstname', '=', False)]}"/>
-                    <field name="firstname"
-                           attrs="{'required': [('lastname', '=', False)]}"/>
-                </group>
+                  <div>
+                    <label for="lastname" string="Lastname"/>
+                    <field name="lastname" attrs=
+                        "{'required': [('firstname', '=', False)]}" class="oe_inline"/><br/>
+                    <label for="firstname" string="Firstname"/>
+                    <field name="firstname" attrs=
+                        "{'required': [('lastname', '=', False)]}" class="oe_inline"/>
+                  </div>
             </xpath>
         </data>
   </field>
