Generalise to not make this a dependency.

--- a/partner_contact_personal_information_page/views/res_partner.xml
+++ b/partner_contact_personal_information_page/views/res_partner.xml
@@ -2,7 +2,8 @@
 <odoo>
 <data>
 
-<record id="personal_information" model="ir.ui.view">
+<!-- Declared the same in every module that may need it -->
+<record id="base.personal_contact_information" model="ir.ui.view">
     <field name="name">Personal information page for contacts form</field>
     <field name="model">res.partner</field>
     <field name="inherit_id" ref="base.view_partner_form"/>
