--- a/partner_firstname/views/res_partner.xml
+++ b/partner_firstname/views/res_partner.xml
@@ -57,7 +57,8 @@
             <xpath expr="//field[@name='child_ids']/form
                          //field[@name='name']"
                    position="after">
-                <group attrs="{'invisible': [('is_company', '=', True)]}">
+                <group attrs="{'invisible': [('is_company', '=', True)]}"
+                       class="o_form_field">
                     <field name="lastname" attrs=
                         "{'required': [('firstname', '=', False),
                                        ('is_company', '=', False)]}"/>
@@ -71,9 +72,7 @@
                    position="before">
                 <div class="oe_edit_only">
                     <field name="is_company"
-                           on_change="onchange_type(is_company)"/>
-                    <label for="is_company"
-                           string="Is a Company?"/>
+                           attrs="{'invisible':True}"/>
                 </div>
             </xpath>
 
