--- a/partner_changeset/views/res_partner_views.xml
+++ b/partner_changeset/views/res_partner_views.xml
@@ -9,7 +9,7 @@
       <field name="priority" eval="18"/>
       <field name="groups_id" eval="[(4, ref('partner_changeset.group_changeset_user'))]"/>
       <field name="arch" type="xml">
-        <xpath expr="//div[@name='buttons']" position="inside">
+        <xpath expr="//div[@name='button_box']" position="inside">
           <button class="oe_inline oe_stat_button"
             type="action"
             name="%(partner_changeset.action_res_partner_changeset_view)d"
