Prepare module for OCA.
This means:

- Add proper README.
- Use new-style copyright & license headers.
- Update translation.
- Remove .pot.
- Drop CRM dependency.
- Move fields into Sales & Purchases tab.
- Rename some fields.
- Probably something more.

--- a/partner_capital/views/res_partner_view.xml
+++ b/partner_capital/views/res_partner_view.xml
@@ -1,4 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
+<!-- © 2015 Antiun Ingeniería S.L. - Antonio Espinosa
+     © 2015 Antiun Ingeniería S.L. - Jairo Llopis
+     License AGPL-3.0 or later (http://www.gnu.org/licenses/agpl.html). -->
+
 <openerp>
 <data>
 
@@ -7,20 +11,20 @@
     <field name="model">res.partner</field>
     <field name="inherit_id" ref="base.view_partner_form"/>
     <field name="arch" type="xml">
-        <field name="phone" position="before">
-            <field name="capital_country" placeholder="Capital country"
-                   attrs="{'invisible': [('is_company', '=', False)]}"
-                   options='{"no_open": True}'/>
-            <field name="capital_registered"
-                   attrs="{'invisible': [('is_company', '=', False)]}"/>
-            <field name="turnover_range" placeholder="Turnover range"
-                   attrs="{'invisible': [('is_company', '=', False)]}"
-                   options='{"no_open": True}'/>
-            <field name="turnover_number"
-                   attrs="{'invisible': [('is_company', '=', False)]}"/>
-            <field name="company_size"
-                   attrs="{'invisible': [('is_company', '=', False)]}"/>
-        </field>
+        <xpath expr="//page[@name='sales_purchases']" position="inside">
+            <group name="captial" string="Capital">
+                <field name="capital_country"
+                       attrs="{'invisible': [('is_company', '=', False)]}"/>
+                <field name="capital_amount"
+                       attrs="{'invisible': [('is_company', '=', False)]}"/>
+                <field name="turnover_range_id"
+                       attrs="{'invisible': [('is_company', '=', False)]}"/>
+                <field name="turnover_amount"
+                       attrs="{'invisible': [('is_company', '=', False)]}"/>
+                <field name="company_size"
+                       attrs="{'invisible': [('is_company', '=', False)]}"/>
+            </group>
+        </xpath>
     </field>
 </record>
 
