--- a/partner_contact_job_position/views/res_partner_view.xml
+++ b/partner_contact_job_position/views/res_partner_view.xml
@@ -8,32 +8,18 @@
     <field name="inherit_id" ref="base.view_partner_form"/>
     <field name="arch" type="xml">
         <field name="function" position="before">
-            <field name="job_position"
-                   placeholder="Job position"
+            <field name="job_position_id"
                    attrs="{'invisible': [('is_company','=', True)]}"
-                   options="{'no_open': True, 'no_create': True}"/>
+                   options='{"no_open": True}'/>
         </field>
-        <xpath expr="//field[@name='child_ids']/form//field[@name='function']" position="before">
-            <field name="job_position"
-                   placeholder="Job position"
+        <xpath expr="//field[@name='child_ids']/form//field[@name='function']"
+               position="before">
+            <field name="job_position_id"
                    attrs="{'invisible': [('is_company','=', True)]}"
-                   options="{'no_open': True, 'no_create': True}"/>
+                   options='{"no_open": True}'/>
         </xpath>
     </field>
 </record>
-
-<!-- Uncomment this to add a new column to tree view
-<record model="ir.ui.view" id="view_partner_tree_job_position">
-    <field name="name">Partner tree with job position</field>
-    <field name="model">res.partner</field>
-    <field name="inherit_id" ref="base.view_partner_tree"/>
-    <field name="arch" type="xml">
-        <field name="email" position="after">
-            <field name="job_position"/>
-        </field>
-    </field>
-</record>
--->
 
 <record model="ir.ui.view" id="view_res_partner_filter_job_position">
     <field name="name">Partner search with job position</field>
@@ -41,12 +27,12 @@
     <field name="inherit_id" ref="base.view_res_partner_filter"/>
     <field name="arch" type="xml">
         <field name="category_id" position="after">
-            <field name="job_position"/>
+            <field name="job_position_id"/>
         </field>
         <filter string="Salesperson" position="after">
             <filter string="Job position"
                     domain="[('is_company','=', True)]"
-                    context="{'group_by': 'job_position'}"/>
+                    context="{'group_by': 'job_position_id'}"/>
         </filter>
     </field>
 </record>
