--- a/partner_capital/views/res_partner_turnover_range_view.xml
+++ b/partner_capital/views/res_partner_turnover_range_view.xml
@@ -25,9 +25,7 @@
 
 <menuitem action="res_partner_turnover_range_action"
           id="menu_res_partner_turnover_range"
-          name="Turnover ranges"
-          parent="base.menu_config_address_book"
-          sequence="5"/>
+          parent="base.menu_config_address_book"/>
 
 </data>
 </openerp>
