--- a/partner_capital/views/res_partner_view.xml
+++ b/partner_capital/views/res_partner_view.xml
@@ -11,7 +11,7 @@
     <field name="model">res.partner</field>
     <field name="inherit_id" ref="base.view_partner_form"/>
     <field name="arch" type="xml">
-        <xpath expr="//page[@name='sales_purchases']/group">
+        <xpath expr="/form/sheet/group">
             <group name="captial"
                    string="Capital"
                    attrs="{'invisible': [('is_company', '=', False)]}">
