--- a/partner_create_by_vat/views/res_partner_view.xml
+++ b/partner_create_by_vat/views/res_partner_view.xml
@@ -7,11 +7,14 @@
             <field name="model">res.partner</field>
             <field name="inherit_id" ref="base_vat.view_partner_form"/>
             <field name="arch" type="xml">
-                <xpath expr="//sheet" position="before">
-           		    <header>
- 				        <button name="button_get_partner_data" attrs="{'invisible': [('name', '&lt;&gt;', ' '),('vat', '=', False),('is_company', '=', False )]}" colspan="2" string="Get Partner Data" context="{'active_id': active_id}" type="object" icon="gtk-execute"/>
-                	</header>  
-           	    </xpath>
+                <field name="vat" position="after">
+           		    <button name="get_partner_data"
+ 				            attrs="{'invisible': [
+ 				                ('vat', '=', False),
+ 				                ('is_company', '=', False )]}"
+ 				            colspan="2" string="Get Partner Data"
+ 				            type="object" icon="gtk-execute"/>
+           	    </field>
             </field>
         </record>
 
