--- a/partner_create_by_vat/views/res_partner_view.xml
+++ b/partner_create_by_vat/views/res_partner_view.xml
@@ -8,11 +8,11 @@
             <field name="inherit_id" ref="base_vat.view_partner_form"/>
             <field name="arch" type="xml">
                 <field name="vat" position="after">
-           		    <button name="get_partner_data"
+           		    <button name="get_vies_data_from_vat"
  				            attrs="{'invisible': [
  				                ('vat', '=', False),
  				                ('is_company', '=', False )]}"
- 				            colspan="2" string="Get Partner Data"
+ 				            colspan="2" string="Get Vies Data"
  				            type="object" icon="gtk-execute"/>
            	    </field>
             </field>
