--- a/partner_identifiers/views/res_partner_view.xml
+++ b/partner_identifiers/views/res_partner_view.xml
@@ -9,12 +9,12 @@
     <field name="inherit_id" ref="base.view_partner_form"/>
     <field name="priority" eval="10"/>
     <field name="arch" type="xml">
-        <notebook>
-            <page string="ID Numbers">
-                <field name="id_numbers" colspan="4" nolabel="1"
-                       widget="one2many_list"/>
-            </page>
-        </notebook>
+        <page name='sales_purchases' position="after">
+          <page string="ID Numbers" name="id_numbers">
+              <field name="id_numbers" colspan="4" nolabel="1"
+                     widget="one2many_list"/>
+          </page>
+        </page>
     </field>
 </record>
 
