partner_firstname: fix user creation User name field is required what is stoping to create a new user

--- a/partner_firstname/views/res_user.xml
+++ b/partner_firstname/views/res_user.xml
@@ -10,6 +10,7 @@
         <data>
             <xpath expr="//field[@name='name']" position="attributes">
                 <attribute name="readonly">True</attribute>
+                <attribute name="required">False</attribute>
             </xpath>
 
             <xpath expr="//field[@name='email']" position="after">
