--- a/partner_relations/view/res_partner.xml
+++ b/partner_relations/view/res_partner.xml
@@ -23,7 +23,7 @@
             <field name="inherit_id" ref="base.view_partner_form" />
             <field name="model">res.partner</field>
             <field type="xml" name="arch">
-                <xpath expr="//div[@name='buttons']" position="inside">
+                <xpath expr="//div[@name='button_box']" position="inside">
                     <button class="oe_inline oe_stat_button"
                             type="action"
                             context="{
