--- a/partner_financial_risk/views/res_partner_view.xml
+++ b/partner_financial_risk/views/res_partner_view.xml
@@ -10,39 +10,61 @@
         <field name="groups_id" eval="[(4, ref('base.group_sale_salesman'))]"/>
         <field name="arch" type="xml">
             <page name="sales_purchases" position="after">
-                <page name="financial_risk" string="Financial Risk" groups="account.group_account_invoice">
-                    <group name="container_risk_1">
-                        <group name="risk_sale_orders" string="Sale Orders">
-                            <field name="risk_sale_order_include"/>
-                            <field name="risk_sale_order_limit"/>
-                            <field name="risk_sale_order"/>
+                <page name="financial_risk" string="Financial Risk" attrs="{'invisible': [('customer','=',False)]}">
+                    <div>
+                        <group name="risk_misc" col="3">
+                            <group name="risk_include" col="3" colspan="2" class="oe_subtotal_footer">
+                                <div colspan="3">
+                                    <h2>General Limits</h2>
+                                    <br/>
+                                </div>
+                                <field name="risk_sale_order_include"/>
+                                <field name="risk_sale_order" nolabel="1"/>
+                                <field name="risk_invoice_draft_include"/>
+                                <field name="risk_invoice_draft" nolabel="1"/>
+                                <field name="risk_invoice_open_include"/>
+                                <field name="risk_invoice_open" nolabel="1"/>
+                                <field name="risk_invoice_unpaid_include"/>
+                                <field name="risk_invoice_unpaid" nolabel="1"/>
+                                <field name="risk_account_amount_include"/>
+                                <field name="risk_account_amount" nolabel="1"/>
+                                <field name="risk_total" colspan="3" class="oe_subtotal_footer_separator"/>
+                                <group col="4" colspan="3">
+                                    <field name="risk_exception" colspan="2"/>
+                                    <field name="credit_limit" colspan="2" groups="account.group_account_invoice"/>
+                                </group>
+                            </group>
+                            <group name="risk_sale_orders"  colspan="1" class="oe_subtotal_footer">
+                                <div colspan="2">
+                                    <h2>Specific Limits</h2>
+                                    <br/>
+                                </div>
+                                <field name="risk_sale_order_limit"/>
+                                <field name="risk_invoice_draft_limit"/>
+                                <field name="risk_invoice_open_limit"/>
+                                <field name="risk_invoice_unpaid_limit"/>
+                                <field name="risk_account_amount_limit"/>
+                            </group>
                         </group>
-                        <group name="risk_draft_invoices" string="Not Validate Invoices">
-                            <field name="risk_invoice_draft_include"/>
-                            <field name="risk_invoice_draft_limit"/>
-                            <field name="risk_invoice_draft"/>
-                        </group>
-                        <group name="risk_open_invoices" string="Open Invoices">
-                            <field name="risk_invoice_open_include"/>
-                            <field name="risk_invoice_open_limit"/>
-                            <field name="risk_invoice_open"/>
-                        </group>
-                        <group name="risk_unpaid_invoices" string="Unpaid Invoices">
-                            <field name="risk_invoice_unpaid_include"/>
-                            <field name="risk_invoice_unpaid_limit"/>
-                            <field name="risk_invoice_unpaid"/>
-                        </group>
-                        <group name="risk_other_account" string="Other Account">
-                            <field name="risk_account_amount_include"/>
-                            <field name="risk_account_amount_limit"/>
-                            <field name="risk_account_amount"/>
-                        </group>
-                        <group name="risk_misc" string="Misc">
-                            <field name="credit_limit"/>
-                            <field name="risk_total"/>
-                            <field name="risk_exception"/>
-                        </group>
-                    </group>
+                    </div>
+                        <!--<group name="risk_sale_orders" string="Sales Order">-->
+                        <!--</group>-->
+                        <!--<group name="risk_draft_invoices" string="Not Validate Invoices">-->
+                            <!--<field name="risk_invoice_draft_limit"/>-->
+                            <!--<field name="risk_invoice_draft"/>-->
+                        <!--</group>-->
+                        <!--<group name="risk_open_invoices" string="Open Invoices">-->
+                            <!--<field name="risk_invoice_open_limit"/>-->
+                            <!--<field name="risk_invoice_open"/>-->
+                        <!--</group>-->
+                        <!--<group name="risk_unpaid_invoices" string="Unpaid Invoices">-->
+                            <!--<field name="risk_invoice_unpaid_limit"/>-->
+                            <!--<field name="risk_invoice_unpaid"/>-->
+                        <!--</group>-->
+                        <!--<group name="risk_other_account" string="Other Account">-->
+                            <!--<field name="risk_account_amount_limit"/>-->
+                            <!--<field name="risk_account_amount"/>-->
+                        <!--</group>-->
                 </page>
             </page>
         </field>
